# YumeYuCard

./: CMakeLists.txt  README.md  package-lock.json  pyproject.toml  vcpkg.json
.github/workflows/: release.yml
src/: main.cpp
src/yumeyucard/: __init__.py
src/yumeyucard/cli/: __main__.py
~/.ymyc/: .ymyc
